pipeline/installs/multi-user/persistence-agent-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-persistenceagent
spec:
  template:
    spec:
      containers:
      - name: ml-pipeline-persistenceagent
