pipeline/installs/multi-user/viewer-crd-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-viewer-crd
spec:
  template:
    spec:
      containers:
      - name: ml-pipeline-viewer-crd
